--- a/index.html
+++ b/index.html
@@ -141,16 +141,15 @@
   </div>
 
   <section id="gallery" aria-label="기본 이미지 갤러리">
-    <!-- 9개 기본 이미지 자리 -->
-    <img src="https://source.unsplash.com/random/300x180?fashion" alt="패션 이미지 1" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,style" alt="패션 이미지 2" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,clothes" alt="패션 이미지 3" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,model" alt="패션 이미지 4" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,runway" alt="패션 이미지 5" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,design" alt="패션 이미지 6" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,outfit" alt="패션 이미지 7" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,clothing" alt="패션 이미지 8" />
-    <img src="https://source.unsplash.com/random/300x180?fashion,trend" alt="패션 이미지 9" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385.jpg" alt="패션 이미지 1" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_01.jpg" alt="패션 이미지 2" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_02.jpg" alt="패션 이미지 3" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_03.jpg" alt="패션 이미지 4" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_04.jpg" alt="패션 이미지 5" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_05.jpg" alt="패션 이미지 6" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_06.jpg" alt="패션 이미지 7" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_07.jpg" alt="패션 이미지 8" />
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/images/KakaoTalk_20251023_194305385_08.jpg" alt="패션 이미지 9" />
   </section>
 
   <script>
